bug affichage jours inaction safari réglé, seul markuss peut archiver du contenu et voir les proformas archivés, ajustements css pour que le programme soit utilisable sur ipad

--- a/profomas/css/resultatpro.css
+++ b/profomas/css/resultatpro.css
@@ -34,10 +34,10 @@ img
 
 /* initialisation de la taille du tableau */
 @media screen and (max-width:100%) { /*sers pour le responsive web design */
-	#tdHeader1 {max-width:2%; }
-	#tdHeader2 {max-width:2%; }
-	#tdHeader3 {max-width:3%; }
-	#tdHeader4 {max-width:15%; }
+	#tdHeader1 {max-width:1%; }
+	#tdHeader2 {max-width:1%; }
+	#tdHeader3 {max-width:2%; }
+	#tdHeader4 {max-width:18%; }
 	#tdHeader5 {max-width:7%; }
 	#tdHeader6 {max-width:3%; }
 	#tdHeader7 {max-width:7%; }
@@ -82,7 +82,7 @@ table.dataTable thead .sorting_desc_disabled{cursor:pointer;*cursor:hand;backgro
 
 
 /*partie style de la pagination */
-.dataTables_wrapper .dataTables_paginate{float:right;text-align:right;padding-top:0.25em}
+/* .dataTables_wrapper .dataTables_paginate{float:right;text-align:right;padding-top:0.25em}
 .dataTables_wrapper .dataTables_paginate 
 .paginate_button{box-sizing:border-box;display:inline-block;min-width:1.5em;padding:0.5em 1em;margin-left:2px;text-align:center;text-decoration:none 
 !important;cursor:pointer;*cursor:hand;color:#333 
@@ -102,7 +102,7 @@ table.dataTable thead .sorting_desc_disabled{cursor:pointer;*cursor:hand;backgro
 .dataTables_wrapper:after{visibility:hidden;display:block;content:"";clear:both;height:0}@media screen and (max-width: 767px){.dataTables_wrapper .dataTables_info,
 .dataTables_wrapper .dataTables_paginate{float:none;text-align:center}
 .dataTables_wrapper .dataTables_paginate{margin-top:0.5em}}@media screen and (max-width: 640px){.dataTables_wrapper .dataTables_length,.dataTables_wrapper .dataTables_filter{float:none;text-align:center}
-.dataTables_wrapper .dataTables_filter{margin-top:0.5em}}
+.dataTables_wrapper .dataTables_filter{margin-top:0.5em}} */
 
 .fermerModale
 {
@@ -121,8 +121,8 @@ table.dataTable thead .sorting_desc_disabled{cursor:pointer;*cursor:hand;backgro
 
 .imgPdf
 {
-	width: 50%;
-	height: 10%;
+	width: 80%;
+	height: 17%;
 }
 
 th
